# ImGUIGM

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
Extension/: CMakeLists.txt
Extension/src/: extension.cpp
Mod/: CMakeLists.txt  ImGUIGM.csproj  ImGUIGM.sln  defs.json  modinfo.json
Mod/src/: FunctionDefininition.cs  Mod.cs
